test-cases/negative/test_052_incomplete_if_condition.lay
# negative test: if statement without condition
# expected: parser should reject this

if then
  print 'hello'
end if


